compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__keyword_in_recursive_function.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main(with: Int) -> Nil {\n  main(with - 1)\n}\n"
---
let main = with': main (with' - 1); in { inherit main; }
