compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__let_last.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main() {\n  let x = 1\n}\n"
---
let main = {}: 1; in { inherit main; }
