compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__multiple_discard.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main(_, _, _) {\n  1\n}\n"
---
let main = _: _1: _2: 1; in { inherit main; }
