compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__no_recur_in_anon_fn.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main() {\n  fn() { main() }\n  1\n}\n"
---
let
  main = { }: let _' = { }: main { }; in builtins.seq _' 1;
in { inherit main; }
