compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__pipe_shadow_import.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "\n        import foo.{println}\n        pub fn main() {\n          let println =\n            \"oh dear\"\n            |> println\n          println\n        }"
---
let
  foo' = builtins.import ./../foo.nix;
  inherit (builtins.import ./../foo.nix) println;
  
  main =
    { }: let println'1 = let _pipe = "oh dear"; in println _pipe; in println'1;
in
{ inherit main; }
