compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__pipe_variable_rebinding.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "\npub fn main() {\n  let version = 1 |> version()\n  version\n}\n\npub fn version(n) {\n  Ok(1)\n}"
---
let
  inherit (builtins.import ./../gleam.nix) Ok;
  
  version = n: Ok 1;
  
  main = { }: let version'1 = let _pipe = 1; in version _pipe; in version'1;
in { inherit version main; }
