compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__recursion_with_discards.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main(f, _) {\n  f()\n  main(f, 1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(f, _) {
  f()
  main(f, 1)
}


----- COMPILED NIX
let
  main = f: _: let _' = f { }; in builtins.seq _' (main f 1);
in
{ inherit main; }
