compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__reserved_word_argument.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main(with) {\n  with\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(with) {
  with
}


----- COMPILED NIX
let main = with': with'; in { inherit main; }
